unpackaged/objects/Disciplinary_Record__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Disciplinary Records</relationshipLabel>
        <relationshipName>Disciplinary_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date of incident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Disciplinary Record</label>
    <nameField>
        <displayFormat>DR-{0000000000}</displayFormat>
        <label>Disciplinary Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disciplinary Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>